# FromSingleToStacked

./: .flake8  .gitattributes  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  get-poetry.py  pyproject.toml
.github/workflows/: test.yml
code_review/: rv_dp0.py  rv_dp1.py  rv_dp2.py
data_selection/: read_h5.py  rv_dp0.py  rv_dp1.py  rv_dp2.py  stacked_info.h5  test_dp1.py
fromsingletostacked/: __init__.py  combine_03.py  cut_05.py  download_01.py  file_name_list.txt  filtering_06.py  initialization_02.py  rotate_04.py  visitnums.txt
fromsingletostacked/combine/: 02_flc_4stacked.py  09_flc_4stacked.py  0f_flc_4stacked.py  15_flc_4stacked.py  1c_flc_4stacked.py  24_flc_4stacked.py  2c_flc_4stacked.py  34_flc_4stacked.py  3a_flc_4stacked.py  42_flc_4stacked.py  4a_flc_4stacked.py  51_flc_4stacked.py  5a_flc_4stacked.py  62_flc_4stacked.py  6c_flc_4stacked.py  73_flc_4stacked.py  80_flc_4stacked.py  8f_flc_4stacked.py  97_flc_4stacked.py  9f_flc_4stacked.py  a5_flc_4stacked.py  ad_flc_4stacked.py  b5_flc_4stacked.py  bc_flc_4stacked.py  c4_flc_4stacked.py  cc_flc_4stacked.py  flc_4stacked.sh  initialization.py
get_data/: download_single_data.py  download_stacked.sh  download_stacked_data.py  get_newfirm.txt
get_data/match/: fits_view.py
get_data/newfirm/: get_stripe82_newfirm.sh
ref/preprocessing/: data preprocess0 download stacked images.py  data preprocess1 counting runs.py  data preprocess2 download single & check most frequent run & dec boundary.py  data preprocess3 arrange stacked images.py  (+9 more)
tests/: test_fromsingletostacked.py
(+81 files in other folders)
